--- a/package.json
+++ b/package.json
@@ -3,17 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "npm run generate:json && next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate:json": "node scripts/json.mjs",
+    "prebuild": "npm run generate:json"
   },
   "dependencies": {
+    "@types/marked": "^4.0.7",
+    "bootstrap": "^5.2.2",
+    "cookies-next": "^2.1.1",
+    "dateformat": "^5.0.3",
+    "gray-matter": "^4.0.3",
+    "marked": "^4.2.0",
     "next": "13.0.0",
+    "next-connect": "^0.13.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "sharp": "^0.31.2"
   },
   "devDependencies": {
+    "@types/dateformat": "^5.0.0",
     "@types/node": "18.11.8",
     "@types/react": "18.0.24",
     "@types/react-dom": "18.0.8",
