--- a/netlify.toml
+++ b/netlify.toml
@@ -4,3 +4,17 @@
   status = 200
   force = true # COMMENT: ensure that we always redirect
   headers = {X-From = "Netlify"}
+
+[[redirects]]
+  from = "/research/assets/*"
+  to = "https://lac.hamish.dev/assets/:splat"
+  status = 200
+  force = true # COMMENT: ensure that we always redirect
+  headers = {X-From = "Netlify"}
+
+[[redirects]]
+  from = "/research/favicon.ico"
+  to = "https://lac.hamish.dev/favicon.ico"
+  status = 200
+  force = true # COMMENT: ensure that we always redirect
+  headers = {X-From = "Netlify"}
