--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "cookies-next": "^2.1.1",
     "dateformat": "^5.0.3",
     "gray-matter": "^4.0.3",
+    "html-react-parser": "^3.0.4",
     "marked": "^4.2.0",
     "next": "13.0.0",
     "next-connect": "^0.13.0",
