Enable Cors attempt 2

--- a/netlify.toml
+++ b/netlify.toml
@@ -21,6 +21,6 @@
 
 [[headers]]
   # Define which paths this specific [[headers]] block will cover.
-  for = "/*"
+  for = "/api/*"
     [headers.values]
     Access-Control-Allow-Origin = "*"
