--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/marked": "^4.0.7",
     "bootstrap": "^5.2.2",
     "cookies-next": "^2.1.1",
+    "cors": "^2.8.5",
     "dateformat": "^5.0.3",
     "gray-matter": "^4.0.3",
     "html-react-parser": "^3.0.4",
@@ -25,6 +26,7 @@
     "sharp": "^0.31.2"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/dateformat": "^5.0.0",
     "@types/node": "18.11.8",
     "@types/react": "18.0.24",
